welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: ')' expected but '}' found.
}
^SnakeBuggle:23: error: Unmatched closing brace '}' ignored here
}
^